# nRFL01

./: .gitignore  .gitmodules  README.md
components/nRF24/: CMakeLists.txt  library.json  library.properties
components/nRF24/inc/: config.h  nRF24.h  nRF24L01.h  spiw.h
components/nRF24/inc/hal/: config.h  machine.h
components/nRF24/src/: nRF24.c
components/nRF24/src/hal/arduino/: machine.c
components/nRF24/src/hal/idf/: machine.c
components/nRF24/src/hal/stm32/: machine.c
components/nRF24/src/wrappers/: spiw_arduino.c  spiw_idf.c  spiw_stm32.c
examples/esp32/basic-functions/: CMakeLists.txt
examples/esp32/basic-functions/main/: main.c
examples/esp32/with-ack/: CMakeLists.txt
examples/esp32/with-ack/main/: CMakeLists.txt
examples/linux/luckfox/basic-function/: CMakeLists.txt  main.c  readme.md
examples/stm32/F756ZG/basic-functions/: .mxproject  CMakeLists.txt  README.md  basic-functions.ioc
examples/stm32/F756ZG/basic-functions/Core/Inc/: main.h
examples/stm32/F756ZG/basic-functions/Core/Src/: main.c  stm32f7xx_hal_msp.c
examples/stm32/F756ZG/basic-functions/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
examples/stm32/F756ZG/basic-functions/cmake/stm32cubemx/: CMakeLists.txt
nRF24/: CMakeLists.txt  library.properties
nRF24/inc/: nRF24.h
nRF24/inc/hal/: config.h
nRF24/src/: nRF24.c
nRF24/src/hal/idf/: machine.c
nRF24/src/hal/linux-luckfox/: machine.c
nRF24/src/hal/stm32/: machine.c
testapp/: CMakeLists.txt
testapp/main/: main.c
